<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.member.NewMountainPassFragment">

    <TextView
        android:id="@+id/new_mountain_pass_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/new_mountain_pass_label"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_start_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_start" />

    <TextView
        android:id="@+id/new_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/edit_start"
        app:layout_constraintTop_toTopOf="@id/new_start_label"
        app:layout_constraintStart_toEndOf="@id/new_start_label" />

    <Button
        android:id="@+id/edit_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/edit_start"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_end_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/end"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_end" />

    <TextView
        android:id="@+id/new_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/edit_end"
        app:layout_constraintTop_toTopOf="@id/new_end_label"
        app:layout_constraintStart_toEndOf="@id/new_end_label" />

    <Button
        android:id="@+id/edit_points"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/edit_end"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_points_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/points"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_points" />

    <TextView
        android:id="@+id/new_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/edit_points"
        app:layout_constraintTop_toTopOf="@id/new_points_label"
        app:layout_constraintStart_toEndOf="@id/new_points_label" />

    <Button
        android:id="@+id/edit_through"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/edit_points"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_through_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/through"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_through" />

    <TextView
        android:id="@+id/new_through"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/edit_through"
        app:layout_constraintTop_toTopOf="@id/new_through_label"
        app:layout_constraintStart_toEndOf="@id/new_through_label" />

    <Button
        android:id="@+id/edit_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/edit_through"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_name" />

    <TextView
        android:id="@+id/new_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/edit_name"
        app:layout_constraintTop_toTopOf="@id/new_name_label"
        app:layout_constraintStart_toEndOf="@id/new_name_label" />

    <Button
        android:id="@+id/edit_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:text="@string/edit"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/new_status_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/status"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_status" />

    <TextView
        android:id="@+id/new_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:textSize="20sp"
        android:maxLines="1"
        android:ellipsize="end"
        app:layout_constraintEnd_toStartOf="@id/edit_status"
        app:layout_constraintTop_toTopOf="@id/new_status_label"
        app:layout_constraintStart_toEndOf="@id/new_status_label" />

    <Button
        android:id="@+id/cancel_mountain_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="@color/red"
        app:layout_constraintBottom_toTopOf="@id/save_mountain_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save_mountain_pass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/finish_editing_pass"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>