...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/points_undecorated"
        android:textSize="20sp"
        android:labelFor="@id/edit_mountain_pass_points"
        app:layout_constraintTop_toBottomOf="@id/edit_points_title_label"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/edit_mountain_pass_points"
        android:layout_width="0dp"
...
        app:layout_constraintStart_toEndOf="@id/edit_points_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@id/edit_points_label"
        android:autofillHints=".AUTOFILL_HINT_NOT_APPLICABLE" />

    <Button
        android:id="@+id/save_mountain_pass_points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
...
