...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/name_undecorated"
        android:textSize="20sp"
        android:labelFor="@id/official_point_name"
        app:layout_constraintBaseline_toBaselineOf="@id/official_point_name"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/official_point_name"
        android:layout_width="0dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mountain_range_label"
        android:autofillHints=".AUTOFILL_HINT_NOT_APPLICABLE" />

    <Button
        android:id="@+id/save_official_point"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="10dp"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
...
